--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@ pyvenv.cfg
 pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,venv,python
+.vscode/settings.json
